--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.8.2",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
